--- a/portfolio-backend/railway.toml
+++ b/portfolio-backend/railway.toml
@@ -1,5 +1,7 @@
 [build]
 builder = "NIXPACKS"
+buildCommand = "mvn clean package -DskipTests"
+watchPatterns = ["src/**"]
 
 [deploy]
 startCommand = "java -jar target/portfolio-backend-0.0.1-SNAPSHOT.jar"
@@ -8,4 +10,5 @@ healthcheckTimeout = 100
 restartPolicyType = "ON_FAILURE"
 
 [env]
-PORT = "8080" 
+PORT = "8080"
+NIXPACKS_JAVA_VERSION = "17" 
